@@ -46,6 +46,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 
 == API changes in 1.17 ==
 * (bug 22738) Allow filtering by action type on query=logevent
+* (bug 22764) uselang parameter for action=parse
 
 === Languages updated in 1.17 ===
 
